        MultibuttonEntry)

2013-04-23  ChunEon Park (Hermet)

        * Support language,changed callback (Fileselector_Button,
        Fileselector Entry, Spinner

2013-04-25  ChunEon Park (Hermet)

        * Fix null pointer access on naviframe item deletion.

2013-04-29  ChunEon Park (Hermet)

        * Fix toolbar item clipped problem on reordering toolbar item.

2013-04-30  Jaehwan Kim

        * Add the config elm_scroll_smooth_start_enable.
        There's no tick when scroller starts scroll if it's set.

2013-04-30  ChunEon Park (Hermet)

        * Layout supports "language,changed" smart callback.

2013-04-30  Jaehwan Kim

        * The momentum animation time is changed as the amount of flick.

2013-05-01 Ryuan Choi (ryuan)

        * Fix elm_object_cursor_theme_search_enabled_set to do as it's name described.

2013-05-02 WooHyun Jung

        * elm_entry_filter_accept_set function now can recognize tags.

2013-05-02 ChunEon Park (Hermet)

        * Don't be dead even if a ctxpopup item callback function is null.

2013-05-03 Shinwoo Kim

        * Fix gengrid does not work under the accessibility.
        * Fix do not append NULL to genlist focus list.

2013-05-01 Ryuan Choi (ryuan)

        * Fix elm_clock_first_interval_set writes wrong value.

2013-05-06 WooHyun Jung

        * Add elm_entry smart callback - "text,set,done".

2013-05-09 Seunggyun Kim

        * Fix remained ecore timer issue when gesture layer was deleted.

2013-05-14 Youngbok Shin

        * Fix ctxpopup can't be called again in the mobile mode entry.

2013-05-16 Ryuan Choi (ryuan)

        * Fix single line enty got multiple line when pasted multiple line.

2013-05-17 Thiep Ha

        * Add selection handlers to entry.

2013-05-23 Daniel Juyung Seo (SeoZ)

        * Fix colorselector color change but when palette item is selected.

2013-05-23 Ryuan Choi (ryuan)

        * Fix elm_colorselector does not emit "changed" when clicked color palatte.